Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanObjectField.quorum
class Main
    Object v
    boolean t = true
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
